Add gradle opts in gradlew script